--- a/dolma.html
+++ b/dolma.html
@@ -164,27 +164,25 @@
 
   <!-- Website Footer
   =================== -->
-  <footer>
+ <footer>
     <div class="container">
       <div class="row">
         <!-- About -->
         <div class="col-md-6 col-sm-12 text-center">
-          <h3>About</h3>
-          <div class="footer-about">
-            "A recipe book is one that you use daily and what we in our family
-            call 'a living book' — a book that you use all the time,
-            not just read once and discard on the shelf.
-            Recipes are by nature derivative and meant to be shared -
-            that is how they improve, are changed, how new ideas are formed. ”
+          <h3>Hakkında</h3>
+          <div class="footer-about"><p style="color: white;">© 2023 Harika Yemekler Tarifleri.   Tüm hakları saklıdır.</p>
+            <p style="color: white;"></p>Adres:  Kabaoğlu, Baki Komsuoğlu bulvarı No:515, Umuttepe, 41001 İzmit/Kocaeli/Türkiye</p>
+            <p style="color: white;"> Telefon: 0123 456 789 </p>
+              <p style="color: white;">E-posta: harikayemekler@gmail.com</p>
+                <p style="color: white;"> Sitemizdeki içerikler yalnızca bilgi amaçlıdır. Sağlık sorunları için lütfen uzman bir sağlık profesyoneline danışın.</p>
           </div>
         </div>
         <!-- Author -->
         <div class="col-md-6 col-sm-12 text-center">
-          <div class="footer-author">
-            Made with
-            <i class="fa fa-heart" aria-hidden="true"></i>
-            love by
-            <a href="https://jraleman.com/" target="_blank">Jose Ramon</a>.
+          <h3>Yasal Bilgilendirme</h3>
+          <div class="footer-about">
+            <br><br><br>
+            <p style="color: white; "> Sitemizdeki içerikler yalnızca bilgi amaçlıdır. Sağlık sorunları için lütfen uzman bir sağlık profesyoneline danışın.</p>
           </div>
         </div>
       </div>
