--- a/index.html
+++ b/index.html
@@ -241,7 +241,8 @@
     </div>
 
     
-    
+    <!--duyuru-->
+    <div class="carousel-inner"> <a href="lahmacun.html"> <img src="images/lahmduyuru.jpg" alt="">  </a></div>
 
     <!-- Slayt gezinme düğmeleri -->
     <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
@@ -299,6 +300,8 @@
     </div>
   </div>
 
+  <!--duyuru-->
+  <div class="carousel-inner">  <a href="sarma.html">  <img src="images/sarmaduyuru.jpg" alt=""> </a> </div>
   <!-- Slayt gezinme düğmeleri -->
   <a class="carousel-control-prev" href="#myNewCarousel" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
